[project]
name = "rblogs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "myst-parser>=4.0.1",
    "pip>=25.2",
    "recommonmark>=0.7.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-markdown-tables>=0.0.17",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "sphinxcontrib-svg2pdfconverter>=1.3.0",
]
